# django_oz_2nd_mini_project_

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
questions/: admin.py  models.py  serializers.py  urls.py  views.py
results/: admin.py  models.py  serializers.py  urls.py  views.py
